[package]
name = "eigenvalues"
version = "0.1.0"
authors = ["felipe <tifonzafel@gmail.com>"]
description = "algorithms to diagonalize symmetric matrices"
readme = "README.md"
categories = [ "science" ]
keywords = [ "linear-algebra" ]
license = "Apache-2.0"
edition = "2018"

[dependencies]
approx = "0.3.2"
nalgebra = "0.18.1"

[lib]
name = "eigenvalues"
path = "src/lib.rs"
